# volo

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  .nvim.lua  CMakeLists.txt  LICENSE  README.md  TODO.md  flake.nix
apps/: CMakeLists.txt  dbgsetup.c  font.c  interface.c  pedestal.c  volo.c
apps/game/: CMakeLists.txt
apps/game/src/: app.c  cmd.c  cmd_internal.h  hud.c  hud_internal.h  input.c  input_internal.h  prefs.c  prefs.h
apps/sandbox/: CMakeLists.txt
apps/sandbox/src/: app.c  cmd.c  cmd_internal.h  input.c  main.c  object.c  object_internal.h  unit.c  unit_internal.h
apps/utilities/: CMakeLists.txt  bcu.c  bcutil.c  blob2j.c  btschema.c  btscheme.c  dbgsetup.c  fetch.c  gzipu.c  httpu.c  lsp.c  pack.c  repl.c  schemasetup.c  schemesetup.c  vkgen.c  zipu.c
apps/volo/: CMakeLists.txt
apps/volo/src/: prefs_internal.h
game/: .gitignore  CMakeLists.txt  id.json
game/res/: game.rc.in
game/src/: app.c  cmd.c  cmd.h  game.c  game.h  hud.c  hud.h  id.h  input.c  input.h  prefs.c  prefs.h
libs/: CMakeLists.txt
libs/ai/: CMakeLists.txt
libs/ai/include/: ai.h  ai_blackboard.h  ai_eval.h  ai_knowledge.h  ai_result.h  ai_tracer.h  ai_tracer_count.h  ai_tracer_record.h  ai_value.h
libs/ai/src/: blackboard.c  eval.c  knowledge.c  result.c  tracer.c  tracer_count.c  tracer_record.c  value.c
libs/ai/test/: config.c  test_blackboard.c  test_node_condition.c  test_node_execute.c  test_node_failure.c  test_node_invert.c  test_node_knowledgecheck.c  test_node_knowledgeclear.c  test_node_knowledgecompare.c  test_node_knowledgeset.c  test_node_parallel.c  test_node_repeat.c  test_node_running.c  test_node_selector.c  test_node_sequence.c  test_node_success.c  test_node_try.c  test_tracer_record.c  test_value.c  utils.c  utils_internal.h
libs/app/: CMakeLists.txt
libs/app/include/: app_check.h  app_cli.h  app_ecs.h  app_type.h
libs/app/src/: app_check.c  app_cli.c  app_ecs.c  glibc_compat.c  main_check.c  main_cli.c
libs/asset/: CMakeLists.txt
libs/asset/include/: asset.h  asset_atlas.h  asset_behavior.h  asset_cursor.h  asset_data.h  asset_decal.h  asset_font.h  asset_fonttex.h  asset_ftx.h  asset_gfx.h  asset_graphic.h  asset_icon.h  asset_inputmap.h  asset_level.h  asset_manager.h  asset_material.h  asset_mesh.h  asset_pack.h  asset_prefab.h  asset_product.h  asset_property.h  asset_raw.h  asset_ref.h  asset_register.h  asset_script.h  asset_shader.h  asset_sound.h  asset_terrain.h  asset_texture.h  asset_vfx.h  asset_weapon.h
libs/asset/src/: cache.c  cache.h  cache_internal.h  data.c  data.h  data_internal.h  format.c  format.h  format_internal.h  forward.h  forward_internal.h  import.c  import.h  import_internal.h  import_mesh.c  import_mesh.h  import_mesh_internal.h  import_texture.c  import_texture.h  import_texture_internal.h  loader.c  loader.h  loader_behavior.c  loader_cursor.c  loader_decal.c  loader_font.c  loader_font.h  loader_font_internal.h  loader_font_ttf.c  loader_fontex.c  loader_fonttex.c  loader_ftx.c  loader_gfx.c  loader_graphic.c  loader_icon.c  loader_inputmap.c  loader_internal.h  loader_level.c  loader_locale.c  loader_material.c  (+56 more)
libs/asset/test/: app.c  config.c  main.c  test_loader_behavior.c  test_loader_font_ttf.c  test_loader_fonttex.c  test_loader_ftx.c  test_loader_gfx.c  test_loader_graphic.c  test_loader_inputmap.c  test_loader_level.c  test_loader_material.c  test_loader_mesh_gltf.c  test_loader_mesh_obj.c  test_loader_prefab.c  test_loader_product.c  test_loader_raw.c  test_loader_script.c  test_loader_shader_spv.c  test_loader_terrain.c  test_loader_texture_atlas.c  test_loader_texture_font.c  test_loader_texture_png.c  test_loader_texture_ppm.c  test_loader_texture_tga.c  test_loader_weapon.c  test_manager.c  utils.c  utils_internal.h
libs/check/: CMakeLists.txt
libs/check/include/: check.h  check_app.h  check_def.h  check_runner.h  check_spec.h
libs/check/src/: app.c  def.c  def_internal.h  output.c  output.h  output.pretty.c  output.pretty.h  output_internal.h  output_log.c  output_log.h  output_log_internal.h  output_mocha.c  output_mocha.h  output_mocha_internal.h  output_pretty.c  output_pretty.h  output_pretty_internal.h  result.c  result.h  result_internal.h  runner.c  spec.c  spec.h  spec_internal.h
libs/check/test/: app.c  config.c  main.c  test_a.c  test_b.c  test_dynarray.c  test_fizzbuzz.c
libs/cli/: CMakeLists.txt
libs/cli/include/: cli.h  cli_app.h  cli_failure.h  cli_help.h  cli_parse.h  cli_read.h  cli_validate.h
libs/cli/src/: app.c  app_internal.h  failure.c  help.c  parse.c  read.c  validate.c
libs/cli/test/: config.c  main.c  test_app.c  test_failure.c  test_help.c  test_parse.c  test_read.c  test_validate.c
libs/core/: .gitignore  CMakeLists.txt  glibc_compat.h  glibc_symver.h  glibc_version.h
libs/core/include/: core.h  core_alignof.h  core_alloc.h  core_annotation.h  core_array.h  core_ascii.h  core_base64.h  core_bc.h  core_bits.h  core_bitset.h  core_compare.h  core_complex.h  core_deflate.h  core_diag.h  core_diag_except.h  core_dlib.h  core_dynarray.h  core_dynbitset.h  core_dynlib.h  core_env.h  (+37 more)
libs/data/: CMakeLists.txt
libs/debug/: CMakeLists.txt
libs/dev/: CMakeLists.txt  id.json
libs/ecs/: CMakeLists.txt
libs/gap/: CMakeLists.txt
libs/gapp/: CMakeLists.txt
libs/geo/: CMakeLists.txt
libs/input/: CMakeLists.txt
libs/jobs/: CMakeLists.txt
libs/json/: CMakeLists.txt
libs/loc/: CMakeLists.txt
libs/log/: CMakeLists.txt
libs/net/: CMakeLists.txt
libs/rend/: CMakeLists.txt
libs/scene/: CMakeLists.txt  id.json
libs/script/: CMakeLists.txt  id.json
libs/snd/: CMakeLists.txt
libs/trace/: CMakeLists.txt
libs/ui/: CMakeLists.txt
libs/vfx/: CMakeLists.txt
libs/xml/: CMakeLists.txt
tools/: CMakeLists.txt  dbgsetup.c
utilities/: CMakeLists.txt  bcu.c  blob2j.c  dbggen.c  dbgsetup.c  fetch.c  httpu.c  idgen.c  lsp.c  pack.c  repl.c  schemagen.c  schemasetup.c  vkgen.c  zipu.c
volo/: .gitignore  CMakeLists.txt
volo/res/: app.rc  app.rc.in
volo/src/: app.c  app.h  cmd.c  hud.c  hud.h  input.c  prefs.c  prefs.h
(+2340 files in other folders)
