# --------------------------------------------------------------------------------------------------
# Libaries cmake file.
# --------------------------------------------------------------------------------------------------

add_subdirectory(asset)
add_subdirectory(check)
add_subdirectory(cli)
add_subdirectory(core)
add_subdirectory(data)
add_subdirectory(ecs)
add_subdirectory(gap)
add_subdirectory(jobs)
add_subdirectory(json)
add_subdirectory(log)
add_subdirectory(rend)
