# --------------------------------------------------------------------------------------------------
# Libaries cmake file.
# --------------------------------------------------------------------------------------------------

add_subdirectory(app)
add_subdirectory(asset)
add_subdirectory(check)
add_subdirectory(cli)
add_subdirectory(core)
add_subdirectory(data)
add_subdirectory(dev)
add_subdirectory(ecs)
add_subdirectory(gap)
add_subdirectory(geo)
add_subdirectory(input)
add_subdirectory(jobs)
add_subdirectory(json)
add_subdirectory(log)
add_subdirectory(net)
add_subdirectory(rend)
add_subdirectory(scene)
add_subdirectory(script)
add_subdirectory(snd)
add_subdirectory(trace)
add_subdirectory(ui)
add_subdirectory(vfx)
